# STAC-Downloader

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: sentinel2-c1_downloader.py  sentinel2_hooks.py
stac_downloader/: __init__.py  cli.py  downloading.py  raster_processing.py  stac_downloader.py  utils.py
stac_downloader/examples/: requirements.txt  sentinel2-c1_downloader.py  sentinel2_hooks.py
stac_downloader/examples/copernicus_dem/: copernicus_dem_downloader_mpc.py
stac_downloader/examples/hls/: planetary_computer_hls.py
stac_downloader/examples/sentinel1/: planetary_computer_s1-GRD_downloader.py  planetary_computer_s1-RTC_downloader.py
stac_downloader/examples/sentinel2/: earthsearch-s2-L2A-c1_downloader.py  planetary_computer_s1-RTC_downloader.py  planetary_computer_s1_downloader.py  planetary_computer_s2-L2A_downloader.py  planetary_computer_s2_downloader.py  sentinel2-c1_downloader.py  sentinel2_hooks.py
tests/integration/: test_downloader.py
tests/unit/: test_downloading.py  test_file_downloading.py  test_raster_processing.py
