[project]
name = "stac_downloader"
version = "0.1.0"
description = "Utility to download, resample and harmonize data from STAC catalogs."
authors = [{ name = "Rohan Sawahn", email = "rohan.sawahn@posteo.de" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "rasterio",
    "pystac",
    "tenacity",
    "requests",
    "tqdm"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov"]

[project.scripts]
stac_downloader = "stac_downloader.cli:main"